# ChangeLog for app-doc/psmark
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-doc/psmark/ChangeLog,v 1.5 2014/08/10 10:58:06 patrick Exp $

  10 Aug 2014; Patrick Lauer <patrick@gentoo.org> psmark-2.1.ebuild:
  Fix description for more repoman happy

  07 Oct 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, #24135.

  04 Oct 2009; Víctor Ostorga <vostorga@gentoo.org> psmark-2.1.ebuild,
  +files/psmark-2.1-Makefile-QA.patch:
  respecting LDFLAGS, fixing pre-stripped files bug 240001, respecting CC
  variable bug 243554, fixing repoman warnings

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> psmark-2.1.ebuild:
  Remove virtual/libc

*psmark-2.1 (18 Jul 2006)

  18 Jul 2006; Steve Arnold <nerdboy@gentoo.org>
  +files/psmark-2.1-string.patch, +metadata.xml, +psmark-2.1.ebuild:
  Initial version of psmark utility for adding a postscript watermark
  to an existing document.  Not yet 64bit clean (patches welcome),
  used with Hylafax.