@@ -1,6 +1,6 @@
 AUX psmark-2.1-Makefile-QA.patch 399 SHA256 99aa55fcd984b08ed79cc7dbcb31590d90c8e5317e2608752732b466b020a5b4 SHA512 efdcccc2e206cc55617e5a895bc7f2e66f0d5dac5dd459c372544658682bec5419c36628109f2d877fbca7f411e7e40af111fdfc96ec37530a5025c4eb9e9ff3 WHIRLPOOL f7394d8a95a2a87627b18f5e9fce75c915bc18a7015f1b8a7273a17eb9d770164c783800ce9ecace64971f1d71e9588dd92ca95855b6af63f7a4a9d24d155908
 AUX psmark-2.1-string.patch 741 SHA256 d52b195ee4a565cbe04cdd730b3b6d8ec2838f42e6c5b913852ae1d053118446 SHA512 bb10c379ef84d13a0c0f6b84ac19132f8f0352582c0441f3f626c94065dc79a68b1796222f9fe13f873b7638a39ea942d80385658ac461df023707ae2bfee158 WHIRLPOOL 5e52cccf5c8b9ebdedbcb31ed1ff6705421ee67839611511f1f7aec1ea5d6229b93aceaa9052c8781e560994001777ac1e92593757698ca9c7326bcae2cde09f
 DIST psmark-v2.1.tar.gz 16296 SHA256 de7df2cb5fbad408406c96a3eccd14f219424a2d42394e64b4c73027f26dd8b4 SHA512 0a765dda878478e767ae02ac0838a9c36a110000b35d557b1b3d17d22c518f42249cd4eba856b476ba8042e026cb49f736077d3bf236f2a9a4f3df4ff4357fef WHIRLPOOL 4113ee8e8b30826e9ce3463c20fd8317726faac3e655630a863cd8a91b59c6014095565340bb2ba68ddfe5b819de675613e2d371af021d00345dda92e3ba5a20
-EBUILD psmark-2.1.ebuild 939 SHA256 cfccfc2d4b4e0dd86cb050cbb520f0ce9199d6a1f42190739160d678e8d8dcf0 SHA512 f16a64ea6f9dfa4acb03be4b60ebc88f46815d7818b3dc12aabf3f43948c1246a83ba80650f28713276de1c7398450e7edebc573c64c3e47826cb5cbb2892732 WHIRLPOOL fd63de16e700291b068d4d247d5cf34d625de849706ecbdb700fa37c94ef6587f7e620989772e3a75165346a0927e4790787aae5883cb667603c5921c5c4a85b
-MISC ChangeLog 1044 SHA256 bef0ea6b554467c74c52112e57362beac0f8199f8a42058f817b66a7fa4996c5 SHA512 2300b9ad009689a577504d185824078e3c0e02481df308417bcc04f0c612fff351d30b63e58e074aa38e137e6933aa014970a8549918f40672db7cf3862f2281 WHIRLPOOL 9cd16f149f9fcdc8cf1feabd3e0a1f0dc7e8c9ff7f4399a58b69a81f6f1d0836a8894fbf7981d944d68b68055d0b1d648fb94203849195e824f3aef3c65e4515
+EBUILD psmark-2.1.ebuild 806 SHA256 34baa574834029de8baf3139aaa644353a3fc824d1a9b27299f2b0e4732bb259 SHA512 c82a909b202f7c45e28aba95a2b92df638eccfa0e333063bc51d390da0861b365d80606e6237def83e9b35c62f9fdf78a60ac167784bef0cac80a32481dfc7b3 WHIRLPOOL 8386ba8eee381e124c56190d861ea0cab07bd4f5679abeff077432cfd03f3d1eb29e90dda234122dc2086092a9d2e98aab6adfbc1561a769176e69cfe8530af1
+MISC ChangeLog 1135 SHA256 e0e8cd1bb757834c1d4f8143d3eee8a8ce76f1a0fb0527ea32a0e74f48117aa3 SHA512 4fc47c242c70ee1b53c9cd97a6677fcbbab5b1ae9367aa6a483b1af21010183a4637ae1e2f76d967009ca95fb8eeb2abd5b5d8ec6c67f6f331dc2c4398cc4c66 WHIRLPOOL a43a74467b49cd6b6da10d594f32cb8653614f5f3d59c61c0c868cf58bc5ca6f7bee8c6c3c1907de050fbc4dcea611180a1e7bcbab41f360aedbb880199c42f4
 MISC metadata.xml 431 SHA256 b4f86906a7de8eb28ae8f8f8a3d3ee8df6b2a2406ae8052b4a655d8a4924c7e0 SHA512 dcd293c916e5f62d737d2ac3b684a100e560ee6ca323bdb836691a2865e6f9f91bc91828e404bfe3657a108ab092c47bd4352853b72eeafe6a00b8ada3fe942c WHIRLPOOL dae260103ee88702cbcc2c67a368b37e422681d527936868f8efc0f6e3b4ea736de0046184ecc1ab0ec615b0d2de65fb7245e9ba4cfd59454df09329a7bdd4ec
